force-app/main/default/objects/VO_SurveyScoring__c/VO_SurveyScoring__c.object-meta.xml
<CustomObject>
    <description>Allow the score recalculation of a Survey type between 2 dates</description>
    <label>Survey scoring</label>
    <nameField>
        <displayFormat>VOSN-{0}</displayFormat>
        <label>Survey scoring Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey scoring</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>