force-app/main/default/objects/VO_SurveyScoring__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <description>end date of the period for which the new scoring should be applied</description>
    <label>End date</label>
    <type>Date</type>
</CustomField>