force-app/main/default/objects/VO_SurveyScoring__c/fields/ScoringDate__c.field-meta.xml
<CustomField>
    <fullName>ScoringDate__c</fullName>
    <description>technical field updated by VO_BatchSurveyScoring when it is run</description>
    <label>Scoring date</label>
    <type>DateTime</type>
</CustomField>