force-app/main/default/objects/VO_SurveyScoring__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <description>start date of the period the new scoring should be applied</description>
    <label>Start date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>