force-app/main/default/objects/VO_SurveyScoring__c/fields/SurveyType__c.field-meta.xml
<CustomField>
    <fullName>SurveyType__c</fullName>
    <description>picklist values should be the same as the ones available in the field Survey Type on Survey object to enable score calculation</description>
    <label>Survey type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>VOICE Store Local Sales</fullName>
            </value>
            <value>
                <fullName>VOICE Store After Sales</fullName>
            </value>
            <value>
                <fullName>VOICE Web Sales</fullName>
            </value>
            <value>
                <fullName>VOICE CSC Sales</fullName>
            </value>
            <value>
                <fullName>VOICE CSC Click And Collect</fullName>
            </value>
            <value>
                <fullName>VOICE WEB Click And Collect</fullName>
            </value>
            <value>
                <fullName>VOICE Endless Offer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>